# jerry

./: README.md
client/: .gitignore  Cargo.toml  cross.toml
client/protofiles/: request_master.proto
client/src/: build.rs  main.rs  proto_rs.rs
client/src/configuration/: args.rs  mod.rs  provider.rs
client/src/connection/: conn.rs  mod.rs
client/src/core/: emulator.rs  message_handler.rs  mod.rs
client/src/emulation/: linux_k.rs  mac_k.rs  mod.rs  windows.rs  windows_k.rs
client/src/proto_rs/: clipboard.rs  request_master.rs  response_slave.rs
client/src/security/: key_exchange.rs  mod.rs  stream_cipher.rs
client/src/serialization/: mapper.rs  mod.rs  proto_factory.rs
client/src/state/: log.rs  mod.rs  ui.rs
server/: JerryServer.sln
server/Jerry/: ConsoleWindow.cs  Jerry.csproj
server/Jerry/ConfigurationManager/: AppSettings.cs  MonitorInfo.cs  MonitorInfoProvider.cs
server/Jerry/Connection/: ClientHealthChecker.cs  CommunicationLayer.cs  ConnectedClient.cs  IPAddressProvider.cs  TcpServer.cs  Ticket.cs
server/Jerry/Controllable/: Client.cs  IComputer.cs  IControllable.cs  IControllableComputer.cs  ScreenSimple.cs  Server.cs
server/Jerry/Controller/: LogController.cs
server/Jerry/Coordinates/: ICoordinate.cs  IVector.cs  LocalCoordinate.cs  MonitorResolution.cs  Vector.cs
server/Jerry/Events/: Keyboard.cs  MouseButton.cs  MouseMove.cs  MouseWheel.cs
server/Jerry/ExtendedDesktopManager/: ExtendedDesktopManager.cs  IExtendedDesktopManager.cs
server/Jerry/Extensions/: EnumExt.cs  (+1 more)
server/JerryServer/: App.xaml  App.xaml.cs  DelegateCommand.cs  JerryServer.csproj  TrayIconResources.xaml  TrayIconVM.cs  app.manifest
server/Serialization/: MessageFactory.cs  Serialization.csproj  SlaveFactory.cs
server/WinApi/: Constants.cs  Kernel32.cs  User32.cs  WinApi.projitems  WinApi.shproj
(+55 files in other folders)
