[package]
name = "jerry_client"
version = "1.3.0"
edition = "2021"
# build = "src/build.rs"

# [build-dependencies]
# protoc-rust = "2.27.1"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#error
simple-error = "0.2.3"
eyre = "0.6.9"

# log
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = ["json"] }

protobuf = { version = "2", features = ["with-bytes"] }
tokio-stream = "0.1.8"
tokio = { version = "1", features = ["full"] }

# security
chacha20 = "0.9.0"
x25519-dalek = "1.2.0"
rand_core = { version= "0.5", features = ["getrandom"] }
rand = "0.8.5"
num = "0.4.0"

validator = { version = "0.16", features = ["derive"] }

#debuging loopback
ratatui = "0.24.0"
#tui = "0.17"
crossterm = "0.22"

# configuration
clap = { version = "4", features = ["derive", "unstable-doc"] }
dialoguer = "0.9.0"
toml = "0.5.8"
serde_derive = "1.0.130"
serde = { version = "1.0", features = ["derive"] }
sysinfo = "0.29.0"
glutin = "0.27.0"
uuid = {version = "1.1.0", features = ["v4"]}
thread-priority = "0.13.1"
tap = "1.0.1"

#clipboard
arboard = "3.3.0"

# emulation
enigo = "0.1.2" 

[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.22"
core-graphics = {version = "0.19.0", features = ["highsierra"]}

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.48", features = [
   "Win32_UI_TextServices",
   "Win32_UI_WindowsAndMessaging", "Win32_Foundation", #get foreground window
    "Win32_UI_Input_KeyboardAndMouse",
    #"Win32_Devices_HumanInterfaceDevice", #mouse HID
] }

[target.'cfg(target_os = "linux")'.dependencies]
x11 = {version = "2.21.0", features = ["xlib", "xrecord", "xinput"]}
